swaylock (1.5-1) unstable; urgency=medium

  * New upstream release
  * Added d/gbp.conf file
  * d/control: Updated Vcs-* URLs for new repository
  * d/patches: updated 0003-Fix-the-version-in-the-buildfile.patch

 -- Birger Schacht <birger@rantanplan.org>  Wed, 22 Jan 2020 19:51:19 +0100

swaylock (1.4-1) unstable; urgency=medium

  * New upstream release
  * d/rules: remove override_dh_auto_configure- it was only
    there to set the version and that did not work
  * d/patches: add patch to set the upstream version in the buildfile
  * d/patches: refresh manpage patch
  * d/gitlab-ci.yml: Add a basic gitlab ci configuration
  * d/control: Set versions for build dependencies as specified
    by upstream build file

 -- Birger Schacht <birger@rantanplan.org>  Sat, 18 May 2019 19:00:50 +0200

swaylock (1.3-2) unstable; urgency=medium

  * Add patch to install zsh completion into correct directory

 -- Birger Schacht <birger@rantanplan.org>  Sun, 03 Mar 2019 18:27:15 +0100

swaylock (1.3-1) unstable; urgency=medium

  * Initial packaging (Closes: 921497)

 -- Birger Schacht <birger@rantanplan.org>  Sat, 09 Feb 2019 11:26:23 +0100