@@ -3,7 +3,9 @@ swaylock (1.5-1) unstable; urgency=medium
   * New upstream release
   * Added d/gbp.conf file
   * d/control: Updated Vcs-* URLs for new repository
-  * d/patches: updated 0003-Fix-the-version-in-the-buildfile.patch
+  * d/patches:
+    + updated 0003-Fix-the-version-in-the-buildfile.patch
+    + updated 0001-Workaround-a-bug-in-scdoc.patch
 
  -- Birger Schacht <birger@rantanplan.org>  Wed, 22 Jan 2020 19:51:19 +0100
 
